--- a/README.adoc
+++ b/README.adoc
@@ -4,6 +4,8 @@ image:https://github.com/vpro/jsr107-magnolia/workflows/build/badge.svg?[Build S
 image:https://img.shields.io/maven-central/v/nl.vpro/jsr107-magnolia.svg?label=Maven%20Central[Maven Central,link=https://search.maven.org/search?q=g:%22nl.vpro%22%20AND%20a:%22jsr107-magnolia%22]
 image:http://www.javadoc.io/badge/nl.vpro/jsr107-magnolia.svg?color=blue[javadoc,link=http://www.javadoc.io/doc/nl.vpro/jsr107-magnolia]
 image:https://codecov.io/gh/vpro/jsr107-magnolia/branch/master/graph/badge.svg[codecov,link=https://codecov.io/gh/vpro/jsr107-magnolia]
+image:https://img.shields.io/nexus/s/https/oss.sonatype.org/nl.vpro/jsr107-magnolia.svg[snapshots,link=https://oss.sonatype.org/content/repositories/snapshots/nl/vpro/jsr107-magnolia/]
+
 
 See
 
